--- a/notebooks/ANN.ipynb
+++ b/notebooks/ANN.ipynb
@@ -21,7 +21,8 @@
     "import sklearn.metrics as metrics\n",
     "import sklearn.datasets as sk_datasets\n",
     "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.preprocessing import LabelBinarizer"
+    "from sklearn.preprocessing import LabelBinarizer\n",
+    "from SGD import custom_SGD"
    ]
   },
   {
@@ -31,7 +32,7 @@
    "outputs": [],
    "source": [
     "class Function:\n",
-    "\t\n",
+    "\n",
     "\t#\n",
     "\t# Sigmoid function for the activation\n",
     "\t# of a neuron, where h is the dot\n",
@@ -47,7 +48,7 @@
     "\t# algorithm\n",
     "\t#\n",
     "\tdef act_Sigmoid_derivative(h):\n",
-    "\t\tsig = act_Sigmoid(h)\n",
+    "\t\tsig = 1. / (1. + np.exp(-h))\n",
     "\t\tderivative = sig*(1-sig)\n",
     "\t\treturn derivative\n",
     "\n",
@@ -96,9 +97,9 @@
     "\t# last layer. It computes the error of the\n",
     "\t# predicted class and the correct one.\n",
     "\t#\n",
-    "\tdef err_SMD(predY,y):\n",
-    "\t\terror = np.square((predY - y)).sum()\n",
-    "\t\treturn error/2\n",
+    "\tdef err_SME(predY,y):\n",
+    "\t\terror = np.square((predY - y)).sum(axis=1)\n",
+    "\t\treturn error/(2*y.shape[1])\n",
     "\n",
     "\t#\n",
     "\t# Sum of the squared differences (SMD) loss\n",
@@ -106,9 +107,10 @@
     "\t# last layer. It computes the error of the\n",
     "\t# predicted class and the correct one.\n",
     "\t#\n",
-    "\tdef err_SMD_derivative(X,predY,y):\n",
-    "\t\terror = (predY - y)\n",
-    "\t\tgrad = np.dot(X.transpose(),error)\n",
+    "\tdef err_SME_derivative(predY,y):#X\n",
+    "\t\tgrad = (predY - y)\n",
+    "\t\t#error = (predY - y)\n",
+    "\t\t#grad = np.dot(X.transpose(),error)\n",
     "\t\treturn grad"
    ]
   },
@@ -126,7 +128,7 @@
     "\t\tself.err_func = Function.__dict__[error]\n",
     "\t\tself.err_derivative = Function.__dict__[error+\"_derivative\"]\n",
     "\t\tself.activations = []\n",
-    "\t\tself.dot_product = []\n",
+    "\t\tself.dot_product = []\t\t\n",
     "\n",
     "\tdef initialize_random_weights(self, n_input, n_perceptron, n_classes):\n",
     "\t\tself.n_hidden_layers = len(n_perceptron)\n",
@@ -135,16 +137,20 @@
     "\n",
     "\t\tfor l in range(self.n_hidden_layers):\n",
     "\t\t\tif (l == 0):\n",
-    "\t\t\t\tw = np.random.rand(n_input+1,n_perceptron[l])\t\t\t\t\n",
+    "\t\t\t\tnp.random.seed(42)\n",
+    "\t\t\t\tw = (np.random.rand(n_input+1,n_perceptron[l]))*0.001\n",
     "\t\t\telse:\n",
-    "\t\t\t\tw = np.random.rand(n_perceptron[l-1]+1,n_perceptron[l])\n",
+    "\t\t\t\tnp.random.seed(42)\n",
+    "\t\t\t\tw = (np.random.rand(n_perceptron[l-1]+1,n_perceptron[l]))*0.001\n",
     "\t\t\tself.hidden_layers.append(w)\n",
     "\t\t\t\n",
     "\n",
     "\t\tif (self.n_hidden_layers == 0):\n",
-    "\t\t\tself.output_layer = np.random.rand(n_input+1,n_classes)\n",
+    "\t\t\tnp.random.seed(42)\n",
+    "\t\t\tself.output_layer = (np.random.rand(n_input+1,n_classes))*0.001\n",
     "\t\telse:\n",
-    "\t\t\tself.output_layer = np.random.rand(n_perceptron[self.n_hidden_layers-1]+1,n_classes)\n",
+    "\t\t\tnp.random.seed(42)\n",
+    "\t\t\tself.output_layer = (np.random.rand(n_perceptron[self.n_hidden_layers-1]+1,n_classes))*0.001\n",
     "\n",
     "\n",
     "\tdef initialize_fixed_weights(self, w):\n",
@@ -273,24 +279,30 @@
     "\t\tJ = []\n",
     "\t\tfor e in range(epochs):\n",
     "\t\t\tgrad1s, grad2s, grad3s = np.array([]),np.array([]),np.array([])\n",
+    "\t\t\t\n",
     "\t\t\tfor x,y in zip(X,Y):\n",
     "\t\t\t\tgrad1, grad2, grad3 = self.backpropagation(x,y)\t\t\t\n",
     "\t\t\t\tgrad1s = grad1s+grad1 if grad1s.size else grad1\n",
     "\t\t\t\tgrad2s = grad2s+grad2 if grad2s.size else grad2\n",
     "\t\t\t\tif grad3: grad3s = grad3s+grad3 if grad3s.size else grad3\n",
+    "\t\t\t\n",
     "\n",
     "\t\t\tgrad1s = grad1s/X.shape[0]\n",
     "\t\t\tgrad2s = grad2s/X.shape[0]\n",
     "\t\t\tgrad3s = grad3s/X.shape[0]\n",
     "\t\t\t\n",
-    "\t\t\t#update weights\n",
+    "\t\t\t#update weights\t\t\t\n",
     "\t\t\tself.output_layer      = self.output_layer      - alpha*grad1s\n",
     "\t\t\tself.hidden_layers[-1] = self.hidden_layers[-1] - alpha*grad2s\n",
     "\t\t\tif(len(self.hidden_layers) > 1): self.hidden_layers[-2] = self.hidden_layers[-2] - alpha*grad3s\n",
+    "\t\t\tprint(self.hidden_layers[-1])\n",
     "\n",
     "\t\t\tsig = self.foward_propagation(X)\n",
     "\t\t\terr = self.err_func(sig,Y)\n",
-    "\t\t\tJ.append(err.sum()/X.shape[0])\n",
+    "\t\t\tj = err.sum()/X.shape[0]\t\t\t\n",
+    "\t\t\tJ.append(j)\n",
+    "\n",
+    "\t\t\tprint(\"Epoch:\",e,\"error:\",j)\n",
     "\t\t\t\t\n",
     "\t\tplt.plot(J)\t\n",
     "\t\tplt.ylabel('Error')\n",
@@ -338,30 +350,32 @@
     "\n",
     "# Random Init\n",
     "teste = ANN(\"act_Sigmoid\", 'err_SMD')\n",
-    "teste.initialize_random_weights(2, [2], 2)\n",
+    "\n",
+    "X,X_test,y,y_test = custom_SGD.get_data_multiclass(None)\n",
+    "X_train, X_val, y_train, y_val = train_test_split(X, y, test_size=0.2, random_state=42)\n",
+    "\n",
+    "teste.initialize_random_weights(X_train.shape[1], [4], len(np.unique(y)))\n",
     "teste.show_weights()\n",
     "teste.show_setup()\n",
     "\n",
-    "'''\n",
-    "# Fixed Init\n",
-    "w1 = np.array([[1,2],[3,4],[5,6]])\n",
-    "w2 = np.array([[7,8],[9,10],[11,12]])\n",
-    "w = [w1,w2]\n",
+    "lb = LabelBinarizer()\n",
+    "lb.fit(y_train)\n",
+    "y_train = lb.transform(y_train)\n",
     "\n",
-    "teste = ANN(\"act_Sigmoid\")\n",
-    "teste.initialize_fixed_weights(w)\n",
-    "teste.show_weights()\n",
-    "teste.show_setup()\n",
-    "'''\n",
+    "teste.batch_training(X_train,y_train,1.2,5)\n",
     "\n",
-    "#----------------------------------\n",
-    "#           Toy Examples\n",
-    "#----------------------------------\n",
+    "sig = teste.foward_propagation(X_train)\n",
+    "print(sig.shape)\n",
+    "print(sig.head(10))\n",
+    "y_pred = np.argmax(sig,axis=1)\n",
     "\n",
-    "X = np.array([[1,2],[3,4]])\n",
-    "Y, aY = teste.foward_propagation(X)\n",
-    "print(\"Y\\n\",Y)\n",
-    "print(\"\\na(Y)\\n\",aY)"
+    "print(y_pred.shape)\n",
+    "\n",
+    "print(y_pred)\n",
+    "\n",
+    "print(y_val)\n",
+    "\n",
+    "evalute_multiclass(y_val,y_pred)"
    ]
   },
   {
